# kolla.otel

./: .ansible-lint  .gitignore  README.md  prek.toml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
ansible/: otel-collector.yml  otel-instrument.yml  otel-rollback.yml
ansible/action_plugins/: kolla_container.py
ansible/roles/otel_collector/: README.md
ansible/roles/otel_collector/defaults/: main.yml
ansible/roles/otel_collector/handlers/: main.yml
ansible/roles/otel_collector/meta/: main.yml
ansible/roles/otel_collector/tasks/: main.yml
ansible/roles/otel_collector/templates/: config.yaml.j2
ansible/roles/otel_instrument/: README.md
ansible/roles/otel_instrument/defaults/: main.yml
ansible/roles/otel_instrument/meta/: main.yml
ansible/roles/otel_instrument/tasks/: inject.yml  main.yml  rollback.yml  stage.yml
examples/: instrumentation.yml
kolla_otel/: __init__.py  app.py  cli.py  config.py  exceptions.py  extravars.py  instrumentation.py
kolla_otel/tests/: __init__.py  test_action_plugin.py  test_cli.py  test_config.py  test_exceptions.py  test_extravars.py  test_instrumentation.py
tests/: __init__.py  test_app.py  test_cli.py  test_config.py  test_exceptions.py  test_extravars.py  test_instrumentation.py  test_kolla_container.py
